--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -962,7 +962,7 @@ async function getRandomCoordinates() {
                     longitude: randomLng,
                         };
       // Resolve the promise with the result
-      resolve(locaiton);
+      resolve(location);
     }, 500); // Simulated delay (500ms)
   });
 }
