--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -904,7 +904,7 @@ document.addEventListener("DOMContentLoaded", () => {
 
 <!-- GeoIP -->
 <!-- script src="https://geoip-js.com/js/apis/geoip2/v2.1/geoip2.js" type="text/javascript"></script -->
-<script>
+<!--script>
 //function getGeoLocation() {
 //     return new Promise((resolve, reject) => {
 //         geoip2.city(
@@ -983,10 +983,10 @@ async function fetchLocation() {
 }
 // Call the function to fetch the location
 fetchLocation();
-</script>
+</script -->
 
 <!-- Qualetics -->
-<script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
+<!-- <script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
 <script>
 try {
     PAGEVIEW_TRACKING = true;
@@ -996,11 +996,13 @@ try {
               trackUserGeoLocation: false
               };
     var qualetics = new Qualetics.service("fiwarestaging", "tCYhHGwxFW28", "L4z5mP", PAGEVIEW_TRACKING, OPTIONS);  
+    var qualetics_showcase = new Qualetics.service("stagingshowcase", "TvebnoeTX8Qa", "QpnumF", PAGEVIEW_TRACKING, OPTIONS);  
     qualetics.init();
+    qualetics_showcase.init()
 } catch (error) {
     console.error("Qualetics initialization failed:", error);
 }
-</script>
+</script> -->
 
 <script src="../app_marketplace.js"></script>
 
