--- a/members/webinars/index.html
+++ b/members/webinars/index.html
@@ -53,8 +53,16 @@
       margin-left: 100px;
       margin-right: 100px;
     }
-    
+
     header {
+      position: fixed;
+      z-index: 1000;
+      width: 100%;
+      top: 0px;
+      left: 0px;
+    }
+    
+    .menu-container {
       background-color: rgb(0, 36, 82);
       display: flex;
       flex-direction: row;
