enable random location for testing

--- a/showcase/product-details/index.html
+++ b/showcase/product-details/index.html
@@ -1747,9 +1747,9 @@ async function getLocationFromIP(ip) {
 // Example usage with async/await
 async function fetchLocation() {    
     try {
-        const ip = await withTimeout(getIpAddress(), 5000);
-        window.geoLocation = await withTimeout(getLocationFromIP(ip), 5000);
-        //window.geoLocation_random = await withTimeout(getRandomCoordinates(), 2000);
+        //const ip = await withTimeout(getIpAddress(), 5000);
+        //window.geoLocation = await withTimeout(getLocationFromIP(ip), 5000);
+        window.geoLocation = await withTimeout(getRandomCoordinates(), 5000);
         document.dispatchEvent(locationEvent);
     } catch (error) {
         window.geoLocation = {
