--- a/directories/people/bod/filters.html
+++ b/directories/people/bod/filters.html
@@ -57,6 +57,7 @@
                         <option value='meditech'>MedITech</option>
                         <option value='nec'>NEC</option>
                         <option value='secmotic'>Secmotic</option>
+                        <option value='telefonica'>Telefonica</option>
             </select>
         </div>
 
