--- a/join-us/types/index.html
+++ b/join-us/types/index.html
@@ -50,3 +50,21 @@
   </div>
 
 </div>
+
+<div class="cat-grid single-item">
+
+  <!-- Individual Member -->
+
+  <div class="grid-item col-3" data-modal="4">
+    <div class="f-cat active col-3">
+        <div class="cat-content col-3">
+            <h4 class="cat-name col-3 individual-package">Individual</h4>
+            <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+            <div class="icons">
+                <div class="cat-details col-3" data-modal="4"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
+            </div>
+        </div>
+    </div>
+</div>
+
+</div>
