--- a/join-us/steps/index.html
+++ b/join-us/steps/index.html
@@ -67,7 +67,7 @@
     <div class="step-content-foot">
       <button type="button" class="active" id="previous" name="prev">Prev</button>
       <button type="button" class="active" id="next" name="next">Next</button>
-      <button type="button" class="active out" id="apply" name="apply">Apply</button>
+      <button formaction="https://www.fiware.org/join-test/#" type="button" class="active out" id="apply" name="apply">Apply</button>
     </div>
       
   </div>
