join-us updates

--- a/join-us/plans/index.html
+++ b/join-us/plans/index.html
@@ -1,27 +1,255 @@
 <table class="gridTable">
     <tbody>
-        <tr class="standard-entry-plan-header">
+        <tr class="plans-header">
             <th colspan="1" scope="row" class="gridTable__rowHead"><span></span></th>
-            <td class="gridTable__cell" data-behavior="gridCell">
-                <div data-component-id="gridCell">
-                    Platinum
+            <td class="gridTable__cell platinum">
+                <div class="label">
+                    <span class="material-symbols-outlined ico-check">corporate_fare</span>Platinum
                 </div>
             </td>
-            <td class="gridTable__cell" data-behavior="gridCell">
-                <div data-component-id="gridCell">
-                    Gold
+            <td class="gridTable__cell gold">
+                <div class="label">
+                    <span class="material-symbols-outlined ico-check">corporate_fare</span>Gold
                 </div>
             </td>
-            <td class="gridTable__cell" data-behavior="gridCell">
-                <div data-component-id="gridCell">
-                    Associate
+            <td class="gridTable__cell associate">
+                <div class="label">
+                    <span class="material-symbols-outlined ico-check">corporate_fare</span>Associate
                 </div>
             </td>
-            <td class="gridTable__cell" data-behavior="gridCell">
-                <div data-component-id="gridCell">
-                    Individual
+            <td class="gridTable__cell individual">
+                <div class="label">
+                    <span class="material-symbols-outlined ico-check">person</span>Individual
                 </div>
             </td>
+        </tr>
+
+        <tr class="gridTable__sectionHeading">
+            <th colspan="5" scope="colgroup" class="gridTable__rowHead">
+                <div class="section-head">
+                    FIWARE for Impact
+                </div>
+            </th>
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Welcome Kit</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Introduction in the Community Round-up call</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Joint new member blog posts</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Promotion in FIWARE Newsletter</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Promotion on FIWARE SoMe Channels</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Guest speakers slot(s)</th>
+            <td colspan="1" scope="row"><b>Unlimited</b> slots per year.</td> 
+            <td colspan="1" scope="row"><b>10</b> per year.<br><b>5</b> SEU<br><b>3</b> Smes & Startup</td>
+            <td colspan="1" scope="row"><b>10</b> per year.<br><b>5</b> SEU<br><b>3</b> Smes & Startup</td>
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td>
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Free events ticket(s)</th> 
+            <td colspan="1" scope="row"><b>10</b> slots per year.</td> 
+            <td colspan="1" scope="row"><b>5</b> per year.<br><b>3</b> SEU<br><b>1</b> Smes & Startup</td>
+            <td colspan="1" scope="row"><b>5</b> per year.<br><b>3</b> SEU<br><b>1</b> Smes & Startup</td>
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td>
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Discounted booth spot</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">FIWARE Impact Stories</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Press Releases</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Dedicated page on fiware.org</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Involvement on the FIWARE publications</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+
+        <tr class="gridTable__sectionHeading alt">
+            <th colspan="5" scope="colgroup" class="gridTable__rowHead">
+                <div class="section-head">
+                    FIWARE for Developers
+                </div>
+            </th>
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Involvement in Tech Webinars</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Tech Webinar’s full recording available</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Quality Assurance services</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Dedicated Q&A line</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Open Calls for FIWARE Experts</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Trainings (classroom)</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Smart Data Models support (priority)</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td>
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">TSC meetings</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">Focus Groups on Sectors</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+
+        <tr class="gridTable__sectionHeading alt">
+            <th colspan="5" scope="colgroup" class="gridTable__rowHead">
+                <div class="section-head">
+                    FIWARE for Academia
+                </div>
+            </th>
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">FISAB</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">University Roadshow</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+
+        <tr class="gridTable__sectionHeading">
+            <th colspan="5" scope="colgroup" class="gridTable__rowHead">
+                <div class="section-head">
+                    FIWARE for Growth
+                </div>
+            </th>
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">MSCs participation</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">FIWARE Advocates</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">Special Open Calls</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service">
+            <th colspan="1" scope="row">EU funding provision</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
+        </tr>
+        <tr class="gridTable__service alt">
+            <th colspan="1" scope="row">FIWARE Showcase</th> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-check">check_circle</span></td> 
+            <td colspan="1" scope="row"><span class="material-symbols-outlined ico-close">close</span></td> 
         </tr>
 
     </tbody>
