--- a/join-us/types/index.html
+++ b/join-us/types/index.html
@@ -9,7 +9,7 @@
   <div class="grid-item col-3" data-modal="4">
       <div class="f-cat active col-3">
           <div class="cat-content col-3">
-              <h4 class="cat-name col-3 platinum-package">Platinum</h4>
+              <h4 class="cat-name col-3 platinum-package"><span class="material-symbols-outlined ico-type">corporate_fare</span>Platinum</h4>
               <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
               <div class="icons">
                   <div class="cat-details col-3" data-modal="4"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
@@ -24,7 +24,7 @@
   <div class="grid-item col-3" data-modal="5">
       <div class="f-cat active col-3">
           <div class="cat-content col-3">
-              <h4 class="cat-name col-3 gold-package">Gold</h4>
+              <h4 class="cat-name col-3 gold-package"><span class="material-symbols-outlined ico-check">corporate_fare</span>Gold</h4>
               <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
               <div class="icons">
                   <div class="cat-details col-3" data-modal="5"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
@@ -40,7 +40,7 @@
   <div class="grid-item col-3" data-modal="6">
       <div class="f-cat active col-3">
           <div class="cat-content col-3">
-              <h4 class="cat-name col-3 associate-package">Associate</h4>
+              <h4 class="cat-name col-3 associate-package"><span class="material-symbols-outlined ico-check">corporate_fare</span>Associate</h4>
               <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
               <div class="icons">
                   <div class="cat-details col-3" data-modal="6"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
@@ -58,7 +58,7 @@
   <div class="grid-item col-3" data-modal="7">
     <div class="f-cat active col-3">
         <div class="cat-content col-3">
-            <h4 class="cat-name col-3 individual-package">Individual</h4>
+            <h4 class="cat-name col-3 individual-package"><span class="material-symbols-outlined ico-check">person</span>Individual</h4>
             <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
             <div class="icons">
                 <div class="cat-details col-3" data-modal="7"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
