join-us stepper fixes

--- a/join-us/steps/index.html
+++ b/join-us/steps/index.html
@@ -5,6 +5,7 @@
     <div data-id="step2" class="step-slider-item"></div>
     <div data-id="step3" class="step-slider-item"></div>
     <div data-id="step4" class="step-slider-item"></div>
+    <div data-id="stepLast" class="step-slider-item"></div>
   </div>
   
   <div class="step-content">
@@ -67,7 +68,7 @@
     <div class="step-content-foot">
       <button type="button" class="active" id="previous" name="prev">Prev</button>
       <button type="button" class="active" id="next" name="next">Next</button>
-      <button formaction="https://www.fiware.org/join-test/#" type="button" class="active out" id="apply" name="apply">Apply</button>
+      <button type="button" class="active out" id="apply" name="apply">Apply</button>
     </div>
       
   </div>
