join-us updates

--- a/join-us/index.html
+++ b/join-us/index.html
@@ -1125,7 +1125,7 @@ z-index: 99999;
 				
 				
 				<ul class="et_pb_tabs_controls clearfix">
-					<li class="et_pb_tab_0 et_pb_tab_active"><a href="#">Benefits & Services</a></li><li class="et_pb_tab_1"><a href="#">Membership Types</a></li><li class="et_pb_tab_2"><a href="#">Membership Plans</a></li>
+					<li class="et_pb_tab_0 et_pb_tab_active"><a href="#">Benefits</a></li><li class="et_pb_tab_1"><a href="#">Types</a></li><li class="et_pb_tab_2"><a href="#">Plans</a></li>
 				</ul>
 				<div class="et_pb_all_tabs">
 					<div class="et_pb_tab et_pb_tab_0 clearfix et_pb_active_content">
