--- a/join-us/types/index.html
+++ b/join-us/types/index.html
@@ -10,8 +10,8 @@
       <div class="f-cat active col-3">
           <div class="cat-content col-3">
               <h4 class="cat-name col-3 platinum-package"><span class="material-symbols-outlined ico-type">corporate_fare</span>Platinum</h4>
-              <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
-              <div class="icons">
+              <div class="cat-excerpt col-3 platinum-package">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+              <div class="icons platinum-package">
                   <div class="cat-details col-3" data-modal="4"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
               </div>
           </div>
@@ -25,8 +25,8 @@
       <div class="f-cat active col-3">
           <div class="cat-content col-3">
               <h4 class="cat-name col-3 gold-package"><span class="material-symbols-outlined ico-check">corporate_fare</span>Gold</h4>
-              <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
-              <div class="icons">
+              <div class="cat-excerpt col-3 gold-package">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+              <div class="icons gold-package">
                   <div class="cat-details col-3" data-modal="5"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
               </div>
           </div>
@@ -41,8 +41,8 @@
       <div class="f-cat active col-3">
           <div class="cat-content col-3">
               <h4 class="cat-name col-3 associate-package"><span class="material-symbols-outlined ico-check">corporate_fare</span>Associate</h4>
-              <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
-              <div class="icons">
+              <div class="cat-excerpt col-3 associate-package">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+              <div class="icons associate-package">
                   <div class="cat-details col-3" data-modal="6"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
               </div>
           </div>
@@ -59,8 +59,8 @@
     <div class="f-cat active col-3">
         <div class="cat-content col-3">
             <h4 class="cat-name col-3 individual-package"><span class="material-symbols-outlined ico-check">person</span>Individual</h4>
-            <div class="cat-excerpt col-3">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
-            <div class="icons">
+            <div class="cat-excerpt col-3 individual-package">Lorem ipsum dolor sit amet, consectetuer adipiscing elit aenean commodo ligula eget dolor aenean massa cum sociis natoque.</div>
+            <div class="icons individual-package">
                 <div class="cat-details col-3" data-modal="7"><span id="ico-info" class="material-symbols-outlined">read_more</span> Read more</div>
             </div>
         </div>
