Updated two ihubs tampere and posadas

--- a/directories/ihubs/filters.html
+++ b/directories/ihubs/filters.html
@@ -40,6 +40,7 @@
                     <option value='heritage'>Heritage</option>
                     <option value='industry'>Industry</option>
                     <option value='logistics'>Logistics</option>
+                    <option value='manufacturing'>Manufacturing</option>
                     <option value='mobility'>Mobility</option>
                     <option value='multidomain'>Multidomain</option>
                     <option value='ports'>Ports</option>
@@ -50,6 +51,7 @@
                     <option value='sustainability'>Sustainability</option>
                     <option value='territory'>Territory</option>
                     <option value='tourism'>Tourism</option>
+                    <option value='transportation'>Transportation</option>
                     <option value='villages'>Villages</option>
                     <option value='water'>Water</option>
         </select>
