New SHowcase product
Adding new product ACCRED

--- a/showcase/fiware-ready/sitemap.html
+++ b/showcase/fiware-ready/sitemap.html
@@ -145,6 +145,7 @@ li {
 		<li><a href="https://www.fiware.org/fiware-ready/ecosystem-informatics-inc/esi-fiware-api.html">Ecosystem Informatics Inc - ESI FIWARE API</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/dinycon-sistemas/dinypark.html">Dinycon Sistemas - DinyPARK</a></li>
 		<li><a href="https://www.fiware.org/fiware-ready/bleecker-technologies/bleecker-system.html">Bleecker Technologies - Bleecker System</a></li>
+		<li><a href="https://www.fiware.org/fiware-ready/gabitel-soluciones-tecnicas--slu/accred.html">GABITEL SOLUCIONES TECNICAS, SLU - ACCRED</a></li>
 	</ul>
 </body>
 </html>
