join-us steps apply now link fix

--- a/join-us/steps/index.html
+++ b/join-us/steps/index.html
@@ -68,7 +68,7 @@
     <div class="step-content-foot">
       <button type="button" class="active" id="previous" name="prev">Prev</button>
       <button type="button" class="active" id="next" name="next">Next</button>
-      <button type="button" onclick="location.href='https://www.fiware.org/about-us/join-us/membership-application/';" class="active out" id="apply" name="apply">Apply now</button>
+      <button type="button" onclick="location.href='https://www.fiware.org/about-us/join-us/membership-application/'" class="active out" id="apply" name="apply">Apply now</button>
     </div>
       
   </div>
