moving qualetics to separate file

--- a/showcase/cities4cities/index.html
+++ b/showcase/cities4cities/index.html
@@ -906,7 +906,10 @@ document.addEventListener("DOMContentLoaded", () => {
 	var scr = document.createElement("script");
 	scr.src = "./pageData.js" + "?ts=" + Math.round(new Date().getTime()/3600000);
 	document.getElementsByTagName("head")[0].appendChild(scr);
-</script></div>
+</script>
+<script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
+<script src="../../app_qualetics.js"></script>
+</div>
 			</div>
 			</div>
 				
