--- a/showcase/index.html
+++ b/showcase/index.html
@@ -2199,22 +2199,7 @@ var et_pb_sticky_elements = {"et_pb_section_0_tb_header":{"id":"et_pb_section_0_
 
 <!-- Qualetics -->
 <script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
-<script>
-try {
-    PAGEVIEW_TRACKING = true;
-    OPTIONS = {
-              host: "wss://api.qualetics.com",
-              port: 443,
-              trackUserGeoLocation: false
-              };
-    if (window.location.pathname.includes("staging/showcase")) {
-      var qualetics = new Qualetics.service("stagingshowcase", "TvebnoeTX8Qa", "QpnumF", PAGEVIEW_TRACKING, OPTIONS);  
-      qualetics.init()
-    }
-} catch (error) {
-    console.error("Qualetics initialization failed:", error);
-}
-</script>
+<script src="../../app_qualetics.js"></script>
 
 <style id='tribe-common-full-style-inline-css' class='tec-customizer-inline-style' type='text/css'>
 :root {
