--- a/showcase/powered-by-fiware/index.html
+++ b/showcase/powered-by-fiware/index.html
@@ -909,6 +909,8 @@ document.addEventListener("DOMContentLoaded", () => {
 	scr.src = "./pageData.js" + "?ts=" + Math.round(new Date().getTime()/3600000);
 	document.getElementsByTagName("head")[0].appendChild(scr);
 </script></div>
+<script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
+<script src="../../app_qualetics.js"></script>
 			</div>
 			</div>
 				
