--- a/showcase/support-services/index.html
+++ b/showcase/support-services/index.html
@@ -911,6 +911,8 @@ document.addEventListener("DOMContentLoaded", () => {
 	scr.src = "./pageData.js" + "?ts=" + Math.round(new Date().getTime()/3600000);
 	document.getElementsByTagName("head")[0].appendChild(scr);
 </script>
+<script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
+<script src="../../app_qualetics.js"></script>
 </div>
 			</div>
 			</div>
