fixed loading app_qualetics.js

--- a/showcase/index.html
+++ b/showcase/index.html
@@ -2199,7 +2199,7 @@ var et_pb_sticky_elements = {"et_pb_section_0_tb_header":{"id":"et_pb_section_0_
 
 <!-- Qualetics -->
 <script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
-<script src="../../app_qualetics.js"></script>
+<script src="../app_qualetics.js"></script>
 
 <style id='tribe-common-full-style-inline-css' class='tec-customizer-inline-style' type='text/css'>
 :root {
