--- a/directories/events-directory/index.html
+++ b/directories/events-directory/index.html
@@ -1434,7 +1434,7 @@ var et_pb_sticky_elements = {"et_pb_section_1_tb_header":{"id":"et_pb_section_1_
 
 
 <script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
-<script src="../../app_qualetics.js"></script>
+<script src="../../qualetics.js"></script>
 
   <!--copyscapeskip-->
   <!-- V1 -->
