--- a/showcase/support-services/index.html
+++ b/showcase/support-services/index.html
@@ -912,7 +912,7 @@ document.addEventListener("DOMContentLoaded", () => {
 	document.getElementsByTagName("head")[0].appendChild(scr);
 </script>
 <script src="https://sdk.qualetics.com/qualetics-js-sdk-v3.js"></script>
-<script src="../../app_qualetics.js"></script>
+<script src="../../qualetics.js"></script>
 </div>
 			</div>
 			</div>
